--- a/faceapp/src/index.css
+++ b/faceapp/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(141,141,180,1) 35%, rgba(0,212,255,1) 100%);
+}
+
+/*Change the property of all buttons to have the pointer effect*/
+button {
+  cursor: pointer;
 }
 
 code {
